...
            "state" : "translated",
            "value" : "Tableau noir"
          }
        }
      }
    },
    "Change Cover" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Einband ändern"
          }
...
            "value" : "Drucken"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Print"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Imprimir"
...
            "state" : "translated",
            "value" : "Vos dernières modifications ne sont pas encore enregistrées"
          }
        }
      }
    },
    "Your PDF is ready." : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dein PDF ist fertig."
          }
...
